--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </main>
 <footer>
    <h6>&copy2025 copy Rights Reserved</h6>
-   <p>Banstar the fate of youfuture is in your hands.</p>
+   <p>Banstar the fate of your future is in your hands.</p>
 </footer>
    
   
